...
            "state" : "translated",
            "value" : "Trời đã tối"
          }
        }
      }
    },
    "All" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "All"
...
            "state" : "translated",
            "value" : "Quay lại máy ảnh"
          }
        }
      }
    },
    "Been here" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Been here"
...
            "state" : "translated",
            "value" : "Trời quang"
          }
        }
      }
    },
    "Close" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
...
            "state" : "translated",
            "value" : "Đang tìm vị trí của bạn…"
          }
        }
      }
    },
    "Friends" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Friends"
...
